2016-10-14  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp: many changes due to new CEGUI version.
	* src/client/GameEngine.cpp: CEGUI's inject* called from mContext.
	* src/client/GameEngine.hpp (mContext): add CEGUI context as pointer.

2016-10-07  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (initializeCegui): becomes a new function
	to be able to move this code.

2016-10-06  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (GameEngine): move lb->finish() and
	add some logger message.
	* src/client/GameEngine.hpp (GameEngine): mSceneMgr becomes a member.

2016-10-05  Jérôme Pasquier  <rainbru@free.fr>

	* ROADMAP: close the git switch item.

	* INSTALL.md: updated with 'Installation Instructions'.
	* INSTALL: renamed to INSTALL.md.
	* ROADMAP: postponed unit test scm/test.scm issue.

2016-10-04  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine_Test.cpp (my_test): switch to GTest.
	* CI/before_install.sh: install GTest.

2016-09-02  Jérôme Pasquier  <rainbru@free.fr>

	* CI/script.sh: remove libc++ reference since we use clang 3.8.

	* CMakeLists.txt (include_directories): add Boost include dir.
	* CMakeLists.txt (rainbrurpg-logger): add ${Boost_LIBRARIES} to fix
	CI issues.

	* ROADMAP: close the landing page section.

2016-09-01  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt (rainbrurpg-services): remove two sources that
	contain additional main() function.
	* CMakeLists.txt (rainbrurpg-services): becomes a shared library.

	* CI/before_install.sh (libogre-dev): fix name issue to libogre-1.8-dev.

	* .travis.yml (dist): switch to trusty to have clang 3.8.
	* CI/before_install.sh (clang): try conditionnal installation of
	clang 3.8.

	* CI/script.sh (clang++): try using libc++ to fix max_align_t issue.

	* CI/before_install.sh (apt-get): add --force-yes due to GPG errors.

	* CI/before_install.sh: trying clang 3.8 instead of 3.9.

	* CI/before_install.sh: add '-y' to ppa line.
