@@ -88,6 +88,7 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-15 sam. 01:44]--[2016-10-15 sam. 02:37] =>  0:53
      CLOCK: [2016-10-14 ven. 23:01]--[2016-10-15 sam. 00:15] =>  1:14
      CLOCK: [2016-10-12 mer. 03:03]--[2016-10-12 mer. 03:22] =>  0:19
      CLOCK: [2016-10-12 mer. 02:27]--[2016-10-12 mer. 02:43] =>  0:16
@@ -108,9 +109,13 @@
   Tested, but failed due to a segfault
 - [-] Test for locally built CEGUI 0.8
   - [X] It works
-  - [ ] Change CMakeLists.txt to search for this version
-  - [ ] Change DEPENDENCIES file
-  - [ ] Can't find "TaharezLook/MouseArrow" image
+  - [X] Change CMakeLists.txt to search for this version 
+    Can't test the but the -0 suffix makes sCEGUI 0.7 fail
+  - [X] Change DEPENDENCIES file
+  - [X] Can't find "TaharezLook/MouseArrow" image or get a segfault
+  - [X] Mouse Coords are wrong
+  - [ ] Seems the resize icon is wrong too
+
 - [ ] Test if basic tutorials for Ogre 1.8.0 work
 - [ ] Maybe switch to OSG 3.4 ?
   currently testing ~/Jeux/osg-test/osg-cegui/
